# SAM

./: README.md  run.sh
Ununtu-task-manager/src/: main.rs  render.rs
gtkm/gtkm/src-tauri/: Cargo.toml
gtkm/gtkm/src-tauri/src/: main.rs
gtkm/src-tauri/: build.rs  tauri.conf.json
gtkm/src-tauri/src/: process.rs  system.rs
